--- a/style.css
+++ b/style.css
@@ -114,9 +114,28 @@ footer .container
     border: 1px solid gray;
     align-items: center;
 }
-.dividers 
+.divider 
 {
-    border-top: .05rem solid #9e9e9e;
-    height: .05rem;
-    margin: .4rem 0;
+    border-top: .1rem solid #c0c2c4;
+    height: .1rem;
+    margin: .5rem 0;
+}
+
+.playerBoxName
+{
+    text-align: center;
+    vertical-align: -webkit-baseline-middle;
+    font-size: 14px; font-weight: bolder; margin: 0 0 1px;
+    text-decoration: #637daa; 
+    line-height: 2em;
+}
+
+.playerClanName
+{
+    text-align: center;
+    vertical-align: -webkit-baseline-middle;
+    font-size: 12px; font-weight: bolder; margin: 0 0 1px;
+    font-style: italic;
+    text-decoration: #637daa; 
+    line-height: 2em;
 }
